[package]
name = "pathsep"
authors = ["Andre Bogus <bogusandre@gmail.com>"]
description = "a small macro to enable easy path construction in other macro calls"
edition = "2018"
keywords = ["macros", "files"]
license = "Apache-2.0/MIT"
readme = "README.md"
repository = "https://github.com/llogiq/pathsep"
version = "0.1.1"
